--- a/zero-io-fs/src/main/resources/application.yml
+++ b/zero-io-fs/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
   profiles: dev
 
 io:
-  file-upload-path: "attachments"
-  file-host: "attachments"
+  file-upload-path: "upload"
+  file-host: ""
   bucket-app-id: "32791238237612378123"
   bucket-app-secret: "EF8WnIPlnDFYPEIt"
