--- a/zero-io-all/pom.xml
+++ b/zero-io-all/pom.xml
@@ -42,6 +42,12 @@
             <version>1.0.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.15</version>
+        </dependency>
     </dependencies>
 
     <build>
