--- a/zero-io-wechat-message/pom.xml
+++ b/zero-io-wechat-message/pom.xml
@@ -28,6 +28,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <skipStandalone>true</skipStandalone>
+        <skipTest>true</skipTest>
     </properties>
 
     <dependencies>
@@ -109,7 +110,6 @@
             </resource>
         </resources>
 
-        <!-- 插件 -->
         <plugins>
 
             <!-- spring 打包插件-->
@@ -131,6 +131,16 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <!-- mvn 生命周期的测试阶段的插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <!-- 默认跳过测试 -->
+                <configuration>
+                    <skip>${skipTest}</skip>
+                </configuration>
             </plugin>
 
         </plugins>
