--- a/zero-io-excel/src/main/resources/application.yml
+++ b/zero-io-excel/src/main/resources/application.yml
@@ -1,3 +1,9 @@
+## zero-io-excel 配置路径配置
+io:
+  excel-template-dir: "excel-templates"
+  excel-export-max-rows: 1000
+## END
+
 server:
   port: 8080
 
@@ -18,11 +24,6 @@ spring:
     schema: classpath*:sql/**/*-schema.sql
     data: classpath*:sql/**/*-data.sql
     initialize: false
-
-io:
-  excel-template-dir: "excel-templates"
-  excel-export-max-rows: 1000
-
 ---
 
 spring:
@@ -41,7 +42,3 @@ spring:
       settings:
         web-allow-others: true
         trace: false
-
-io:
-  excel-template-dir: "excel-templates"
-  excel-export-max-rows: 1000
