解决properties中文乱码问题

--- a/zero-io-wechat-message/src/main/resources/application.properties
+++ b/zero-io-wechat-message/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-# ????api
-# ?????access_token?api url,methods?GET
+# 微信官方api
+# 获取凭证access_token api url,methods?GET
 wechat.getAccessToken.url=https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid={appid}&secret={secret}
-# ????????api url,methods?POST
+# 发送订阅消息api url,methods?POST
 wechat.sendMessage.url=https://api.weixin.qq.com/cgi-bin/message/subscribe/send?access_token={access_token}
