修改properties文件编码格式

--- a/zero-io-wechat-message/src/main/resources/application.properties
+++ b/zero-io-wechat-message/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-# 微信官方api
-# 获取凭证access_token api url,methods?GET
+# WeChat official api
+# get access_token api url,methods?GET
 wechat.getAccessToken.url=https://api.weixin.qq.com/cgi-bin/token?grant_type=client_credential&appid={appid}&secret={secret}
-# 发送订阅消息api url,methods?POST
+# send message api url,methods:POST
 wechat.sendMessage.url=https://api.weixin.qq.com/cgi-bin/message/subscribe/send?access_token={access_token}
+.
